# TamarinOpenXrAndroidBindings

./: .gitignore  LICENSE  README.md  README_DEEP.md  README_PUBLISHING.md  gradle.properties  jme3-android-native-documentation.md  settings.gradle
.github/scripts/: upload_central.sh
.github/workflows/: build.yml  publish.yml
.junie/: guidelines.md
android-java/: build.gradle
android-java/src/main/java/com/onemillionworlds/tamarin/openxrbindings/: Library.java  MemoryStack.java  MemoryUtil.java  PointerBuffer.java  Struct.java  StructBuffer.java  XrApiLayerProperties.java  XrExtensionProperties.java  XrLoaderInitInfoBaseHeaderKHR.java  XrResult.java  XrStructureType.java
android-native/: AndroidManifest.xml  build.gradle
android-native/src/main/java/com/onemillionworlds/tamarin/openxrbindings/: BufferUtils.java  Handle.java  Layout.java  Library.java  NativeResource.java  NativeSample.java  Struct.java  StructBuffer.java  StructSetterValidationObject.java  XR10.java  XR10ConstantsOld.java  XR10Utils.java  XrApiLayerProperties.java  XrExtensionProperties.java  XrLoaderInitInfoBaseHeaderKHR.java  (+1 more)
android-native/src/native/: CMakeLists.txt
android-native/src/native/include/: tamarinManualDefines.h
android-native/src/native/src/: com_onemillionworlds_tamarin_openxrbindings_Library.c  com_onemillionworlds_tamarin_openxrbindings_MemoryUtil.c  com_onemillionworlds_tamarin_openxrbindings_memory_MemoryUtil.c  com_onemillionworlds_tamarin_openxrbindings_thickc_ThickC.c
android-native/src/openxrSpec/: xr.xml
android-native/src/test/resources/: expectedSizes.csv
android-native/src/test/resources/exampleStructs/: XrActionSetCreateInfo_reference.java  XrDebugUtilsMessengerCreateInfoExt_reference.java  XrHandCapsuleFB_reference.java  XrHapticVibration_reference.java  XrInstanceCreateInfo_reference.java  XrInteractionProfileDpadBindingEXT_reference.java  XrSessionActionSetsAttachInfo_reference.java  XrSpaceUuidFilterInfoFB_reference.java  XrVisibilityMaskKHR_reference.java
android-native/src/test/resources/referenceStructs/: XrActionSetCreateInfo_reference.java  XrActionsSyncInfo_reference.java  XrDebugUtilsMessengerCreateInfoEXT_reference.java  XrDebugUtilsMessengerCreateInfoExt_reference.java  XrHandCapsuleFB_reference.java  XrHapticVibration_reference.java  XrInstanceCreateInfo_reference.java  XrInteractionProfileDpadBindingEXT_reference.java  XrSessionActionSetsAttachInfo_reference.java  XrSpaceUuidFilterInfoFB_reference.java  XrSwapchainImageBaseHeader_reference.java  XrVisibilityMaskKHR_reference.java
buildSrc/: build.gradle
gradle/: libs.versions.toml
lib/: AndroidManifest.xml  build.gradle  proguard-rules.pro
lib/src/main/native/: CMakeLists.txt
lib/src/main/native/jni/include/: com_onemillionworlds_tamarin_openxrbindings_Library.h  com_onemillionworlds_tamarin_openxrbindings_MemoryUtil.h
lib/src/main/native/jni/src/: com_onemillionworlds_tamarin_openxrbindings_Library.c  com_onemillionworlds_tamarin_openxrbindings_MemoryUtil.c
lib/src/main/native/openxr/: CMakeLists.txt
lib/src/main/native/openxr/jni/: com_onemillionworlds_tamarin_openxrbindings_Library.c
(+82 files in other folders)
